--- a/src/components/projects/projects-styles.css
+++ b/src/components/projects/projects-styles.css
@@ -32,7 +32,7 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: 4fr 0.7fr 1fr;
+  grid-template-rows: 4fr 0.5fr 1.2fr;
   transition: var(--transition-features);
 }
 
@@ -58,7 +58,12 @@
   margin: auto 0;
 }
 
-.projects .content-cards .cards .cards-content h3 {
+.projects .content-cards .cards .cards-content a {
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+.projects .content-cards .cards .cards-content a {
   font-size: 1.8rem;
   font-weight: 600;
   margin: 0;
@@ -66,12 +71,12 @@
   transition: var(--transition-features);
 }
 
-.projects .content-cards .cards .cards-content h3:hover {
+.projects .content-cards .cards .cards-content a:hover {
   color: var(--color-accent);
   cursor: pointer;
 }
 
-.projects .content-cards .cards .cards-content h3 > i {
+.projects .content-cards .cards .cards-content a > i {
   color: var(--color-text);
   font-size: 1.1rem;
   margin-left: 12px;
@@ -80,7 +85,7 @@
   transition: var(--transition-features);
 }
 
-.projects .content-cards .cards .cards-content h3:hover i {
+.projects .content-cards .cards .cards-content a:hover i {
   color: var(--color-accent);
   opacity: 1;
   transform: translateY(-2px) translateX(0) scale(1);
